# livekit

./: .dockerignore  .env.local  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Dockerfile.agent  Dockerfile.ui  README.md  agent.py  agent_diagnostic.py  cartesia_usage.json  dev.sh  entrypoint.sh  list_trunks.py  livekit-agents.md  livekit.toml  llm.py  load_test.py  pyproject.toml  signature.txt  stt.py  test_aiohttp.py  test_db.py  test_dispatch.py  test_kb.py  test_lk_trunk.py  test_protobuf_none.py  test_proxy.py  test_upload.py  tts.py  ui_server.py
docs/: call_orchestration.md  inbound-testing.md  inbound.md  test-payloads.http
grafana-local/: docker-compose.yml  prometheus.yml
grafana-local/grafana/provisioning/dashboards/: grafana-dashboard.json
livekit_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mantra/: agent.py  dispatcher.py  email_alerts.py  knowledge_base.py  log_config.py  retriever.py  telemetry.py  ui_server.py  utils.py
mantra/migrations/: 001_kb_pages.py  002_org_configs.py
massist/: main.py  pyproject.toml
massist/src/: agent.py
massist/static/: app.js  index.html
mcp/: README.md  server.py
obsidian/: Home.md  README.md
obsidian/.obsidian/: appearance.json  graph.json  workspace.json
obsidian/Agents/: Backend Agent.md  DevOps Agent.md  Documentation Agent.md  Frontend Agent.md  Master Agent.md  QA Agent.md
obsidian/Architecture/: APIs.md  Components.md  Data Flow.md  Database.md  Dependencies.md  Design Decisions.md  Infrastructure.md  Overview.md
obsidian/Context/: External Services.md  Project Summary.md  Repository Map.md  Stack.md
obsidian/Development/: Backlog.md  Bugs.md  Changelog.md  Current Sprint.md  Release Notes.md  Roadmap.md  TODO.md
obsidian/Features/: API Server.md  Crash Alerts.md  Dashboard.md  Dispatcher.md  Feature Index.md  Knowledge Base.md  MCP Server.md  Post-Call Processing.md  Telephony Integration.md  Test Console.md  Voice Agent.md
obsidian/Inbox/: .gitkeep
obsidian/Knowledge/: Best Practices.md  Coding Standards.md  Common Commands.md  Conventions.md  Debugging.md  Environment.md  Glossary.md
obsidian/Templates/: Changelog Entry.md  Decision Record.md  Feature Page.md
scripts/: install-hooks.sh  pre-commit-vault-guard.sh  vault-stale-check.sh
static/: app.js  dashboard.html  dashboard.js  index.html  kb_chat.html  login.html  network.html
tests/: conftest.py  test_agent_webhook.py  test_mcp_server.py  test_ui_server_endpoints.py  test_utils.py
trigger/: Dockerfile  main.py  requirements.txt
