[project]
name = "livekit-agent"
version = "0.1.0"
description = "A professional voice agent built with LiveKit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-api>=1.1.0",
    "livekit-agents[silero,turn-detector]~=1.4",
    "livekit-plugins-openai",
    "livekit-plugins-assemblyai",
    "livekit-plugins-cartesia",
    "livekit-plugins-ai-coustics",
    "livekit-plugins-noise-cancellation~=0.2",
    "flask>=3.1.3",
    "python-dotenv",

]

[tool.setuptools.packages.find]
include = ["api*"]
exclude = ["static*", "templates*", "massist*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
