[project]
name = "livekit-agent"
version = "0.1.0"
description = "A professional voice agent built with LiveKit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-api>=1.1.0",
    "livekit-agents[silero,turn-detector]~=1.4",
    "livekit-plugins-openai",
    "livekit-plugins-google",
    "livekit-plugins-deepgram",
    "livekit-plugins-assemblyai",
    "livekit-plugins-ai-coustics",
    "livekit-plugins-noise-cancellation~=0.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv",
    "torch",
    "mcp[cli]",
    "asyncpg",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "pydub>=0.25.1",
    "redis>=8.0.0",
    "pyjwt>=2.8.0",
    "openai>=1.30.0",
    "pypdf>=3.17.0",
    "trafilatura>=1.8.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mantra*"]
exclude = ["static*", "recordings*", "massist*"]

[project.scripts]
mantra-agent = "mantra.agent:run_agent"
mantra-ui = "mantra.ui_server:main"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

